5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1793_1616.log
== TEST (2019-05-30 18:38:00) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
gelo=2
fogo=3
choque=4
conjuracao=8
ilusao=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:38:47) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=2
FOGO=3
CHOQUE=4
CONJURACAO=8
ILUSAO=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:42:25) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m=2
FOGO=m=3
CHOQUE=m=4
CONJURACAO=m=8
ILUSAO=m=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:43:49) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m=2
FOGO=m=3
CHOQUE=m=4
CONJURACAO=m=8
ILUSAO=m=10
dt=m*dano
print(dt)
-- EXECUTION TIME:
0.37432
-- TEST CASE 1:
---- input:
["GELO","ILUSAO","CHOQUE"]
[2,1,8]
---- correct output:
46
---- user output:
[20 10 80]
-- TEST CASE 2:
---- input:
["GELO","CONJURACAO","CHOQUE"]
[2,4,2]
---- correct output:
44
---- user output:
[20 40 20]
-- TEST CASE 3:
---- input:
["GELO","ILUSAO","CHOQUE","FOGO"]
[2,3,1,4]
---- correct output:
50
---- user output:
[20 30 10 40]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:43:59) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m=2
FOGO=m=3
CHOQUE=m=4
CONJURACAO=m=8
ILUSAO=m=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:30) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m=2
FOGO=m=3
CHOQUE=m=4
CONJURACAO=m=8
ILUSAO=m=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:46:47) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m=2=d
FOGO=m=3=d
CHOQUE=m=4=d
CONJURACAO=m=8=d
ILUSAO=m=10=d
dt=m*dano
print(dt)
-- ERROR:
File "XXXX", line 4
    GELO=m=2=d
          ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:47:14) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m=2
FOGO=m=3
CHOQUE=m=4
CONJURACAO=m=8
ILUSAO=m=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:48:07) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m=2
FOGO=m=3
CHOQUE=m=4
CONJURACAO=m=8
ILUSAO=m=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:48:22) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m=2
FOGO=m=3
CHOQUE=m=4
CONJURACAO=m=8
ILUSAO=m=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:50:47) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m=2
FOGO=m=3
CHOQUE=m=4
CONJURACAO=m=8
ILUSAO=m=10
dgelo=2
dfogo=3
dchoque=4
dconjuracao=8
dilusao=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:52:53) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m
FOGO=m
CHOQUE=m
CONJURACAO=m
ILUSAO=m
dgelo=2
dfogo=3
dchoque=4
dconjuracao=8
dilusao=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:55:54) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m
FOGO=m
CHOQUE=m
CONJURACAO=m
ILUSAO=M
GELO=2
FOGO=3
CHOQUE=4
CONJURACAO=8
ILUSAO=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:56:38) 
-- CODE:
from numpy import *
m=array(eval(input("tipo de magia: ")))
dano=array(eval(input("quantidade de dano: ")))
GELO=m
FOGO=m
CHOQUE=m
CONJURACAO=m
ILUSAO=m
GELO=2
FOGO=3
CHOQUE=4
CONJURACAO=8
ILUSAO=10
dt=m*dano
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
